--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,8 +1,8 @@
-name: photopea
+name: humble-store
 version: '0.1'
-summary: Image editor
+summary: Desktop client
 description: |
-Online Image editor.
+a digital storefront for video games.
 
 confinement: strict
 grade: stable
@@ -34,8 +34,8 @@ parts:
       - -node_modules
 
 apps:
-  photopea:
-    command: env TMPDIR=$XDG_RUNTIME_DIR desktop-launch $SNAP/app/photopea
+  humble-store:
+    command: env TMPDIR=$XDG_RUNTIME_DIR desktop-launch $SNAP/app/humble-store
     plugs:
       - home
       - x11
