--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,8 +1,8 @@
-name: humble-store
+name: maeve
 version: '0.1'
-summary: Desktop client
+summary: Desktop client for Maeve
 description: |
-a digital storefront for video games.
+a PWA Apple Music web player with Last.fm support. 
 
 confinement: strict
 grade: stable
@@ -34,8 +34,8 @@ parts:
       - -node_modules
 
 apps:
-  humble-store:
-    command: env TMPDIR=$XDG_RUNTIME_DIR desktop-launch $SNAP/app/humble-store
+  maeve:
+    command: env TMPDIR=$XDG_RUNTIME_DIR desktop-launch $SNAP/app/maeve
     plugs:
       - home
       - x11
